# RAGalyst

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  index.html  pyproject.toml
src/ragalyst/: cli.py  load_config.py  module_registry.py
src/ragalyst/config/: base.yaml
src/ragalyst/config/data/dataset_manager/: qca.yaml  ragas_qca.yaml
src/ragalyst/config/data/text_processor/: chunk.yaml  knowledge_graph.yaml
src/ragalyst/config/embedder/: gemini.yaml  huggingface.yaml  ollama.yaml  openai.yaml
src/ragalyst/config/experiment/: classify_low_correctness_reason.yaml  embedder_retrieval_eval.yaml  llm_with_rag_eval.yaml
src/ragalyst/config/llm/: gemini.yaml  huggingface.yaml  ollama.yaml  openai.yaml
src/ragalyst/config/metrics/: gemini.yaml  huggingface.yaml  ollama.yaml  openai.yaml
src/ragalyst/config/rag/: light.yaml  vector.yaml
src/ragalyst/data/dataset_manager/: __init__.py  base.py  qca.py  ragas_qca.py
src/ragalyst/data/text_processor/: __init__.py  base.py  chunk.py  knowledge_graph.py
src/ragalyst/embedder/: __init__.py  base.py  gemini.py  huggingface.py  ollama.py  openai.py
src/ragalyst/experiment/: __init__.py  base.py  classify_low_correctness_reason.py  embedder_retrieval_eval.py  llm_with_rag_eval.py
src/ragalyst/llm/: __init__.py  base.py  gemini.py  huggingface.py  ollama.py  openai.py
src/ragalyst/metrics/: __init__.py  answerability.py  answerability_optimized.py  base.py  bleu.py  correctness.py  correctness_optimized.py  cosine_similarity.py  groundedness.py  hit_rate.py  rank.py  relevance.py  rouge.py  standalone.py
src/ragalyst/metrics/datasets/: squadv2_test.json  squadv2_train.json  sts_test.json  sts_train.json
src/ragalyst/metrics/dspy_metrics/: answer_correctness.json
src/ragalyst/metrics/ragas_metrics/: answer_correctness.py  answer_relevancy.py  faithfulness.py  response_relevancy.py
src/ragalyst/rag/: __init__.py  base.py  light.py  vector.py
src/ragalyst/utils/cache/: cache_path.py
src/ragalyst/utils/plot_results/: plot_embedder_retrieval_eval.py  plot_llm_dataset_generation_source_bias.py  plot_llm_with_rag_eval.py  plot_llm_with_rag_n_chunks_eval.py  plot_prompt_optimization_k_ablation.py
tests/: test_pytest.py
