[project]
name = "ragalyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tugonbob", email = "57576522+tugonbob@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[project.scripts]
ragalyst = "ragalyst:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle (docstrings)
]
ignore = [
    # Google convention prefers summary on the first line; these are commonly disabled:
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line
    "D104", # Missing docstring in public package
    "E501", # Line too long
]

[tool.ruff.lint.pydocstyle]
convention = "google"
